Add SM3 Digest implementation based on Vector API